@@ -7,7 +7,7 @@
 cd $(dirname "$0")/.. || exit
 DATE=$(date --utc +%Y-%m-%d) || exit
 svn status -q $@ | egrep "\w" || exit
-PATHS=$(svn status -q $@ | sed "s|^. *||" | egrep -v "test_")
+PATHS=$(svn status -q $@ | sed "s|^. *||" | egrep -v "test_" | sort)
 
 mv ChangeLog ChangeLog.old
 echo -e "$DATE  $NAME  <$EMAIL>\n" > ChangeLog
