@@ -1,6 +1,16 @@
 2007-02-26  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/_agents/format.py:
+	* gaupol/gtk/_agents/view.py:
+	* gaupol/gtk/app.py:
+	Allow UIMAction menu_item callbacks be None.
+
+	* tools/add-changelog:
+	Sort files.
+
+2007-02-26  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/_agents/format.py:
 	* gaupol/gtk/_actions/format.py:
 	* data/ui.xml:
 	Add format menu items.
